// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizonCardFooter render should not render the azimuth field when it is not present in the config but data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should not render the azimuth field when it is present in the config but no data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should not render the dawn field when it is not present in the config but data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should not render the dawn field when it is present in the config but no data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should not render the dusk field when it is not present in the config but data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should not render the dusk field when it is present in the config but no data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should not render the elevation field when it is not present in the config but data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should not render the elevation field when it is present in the config but no data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should not render the noon field when it is not present in the config but data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should not render the noon field when it is present in the config but no data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should render the azimuth field when it is present in the config and data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit-->
      <div class="horizon-card-text-container">
        <span class="horizon-card-field-name"><!--?lit-->azimuth</span>
        <span class="horizon-card-field-value"><!--?lit-->0</span>
      </div>
    
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should render the dawn field when it is present in the config and data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit-->
      <div class="horizon-card-text-container">
        <span class="horizon-card-field-name"><!--?lit-->dawn</span>
        <span class="horizon-card-field-value"><!--?lit-->0</span>
      </div>
    
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should render the dusk field when it is present in the config and data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit-->
      <div class="horizon-card-text-container">
        <span class="horizon-card-field-name"><!--?lit-->dusk</span>
        <span class="horizon-card-field-value"><!--?lit-->0</span>
      </div>
    
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should render the elevation field when it is present in the config and data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit-->
      <div class="horizon-card-text-container">
        <span class="horizon-card-field-name"><!--?lit-->elevation</span>
        <span class="horizon-card-field-value"><!--?lit-->0</span>
      </div>
    
        </div>
      </div>
    
`;

exports[`HorizonCardFooter render should render the noon field when it is present in the config and data for it is provided 1`] = `
<!---->
      <div class="horizon-card-footer">
        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit-->
      <div class="horizon-card-text-container">
        <span class="horizon-card-field-name"><!--?lit-->noon</span>
        <span class="horizon-card-field-value"><!--?lit-->0</span>
      </div>
    
          <!--?lit--><!--?-->
        </div>

        <div class="horizon-card-field-row">
          <!--?lit--><!--?-->
          <!--?lit--><!--?-->
        </div>
      </div>
    
`;
